# trading

./: .gitignore  LICENSE  README.md  task_plan.md
.github/workflows/: agent-ci.yml  infra-ci.yml  mobile-build.yml  mobile-ci.yml  security.yml
agent/: .dockerignore  .env.example  Dockerfile  pyproject.toml
agent/api/: __init__.py  deps.py  main.py
agent/api/routes/: agents.py  analyze.py  eval.py  notifications.py  orders.py  portfolio.py  prices.py
agent/backtest/: __init__.py  data.py  llm_backtest.py  optimize.py  run.py  strategies.py
agent/scripts/: backup.py  daily_run.sh  eval_report.py  kill_check.py  notify_ops.py  preflight.py  snapshot.py  trade.py
agent/tests/: test_api_analyze.py  test_api_eval.py  test_api_kill_switch.py  test_api_portfolio_history.py  test_api_portfolio_snapshot.py  test_api_prices.py  test_auth.py  test_backtest_engine.py  test_backtest_strategies.py  test_council.py  test_dataflows_smoke.py  test_eval_report.py  test_eval_risk_free.py  test_execution.py  test_finnhub.py  test_graph_routing.py  test_kill_switch_file.py  test_llm_backtest.py  test_llm_routing.py  test_metrics_sortino.py  test_risk_circuit_breaker.py  test_risk_concentration.py  test_risk_position_sizing.py  test_risk_sizer.py  test_sector_map.py  test_snapshot.py  test_storage.py
agent/tradingagents_tr/: __init__.py  schemas.py
agent/tradingagents_tr/dataflows/: __init__.py  bulk_loader.py  kap.py  matriks.py  reddit_client.py  sec_edgar.py  tcmb.py
agent/tradingagents_tr/graph/: __init__.py  tr_setup.py
agent/tradingagents_tr/llm/: __init__.py
agent/tradingagents_tr/prompts/tr/: disclaimer.md  instrument_context.md
agent/tradingagents_tr/risk/: metrics.py  position_sizing.py
agent/tradingagents_us/: __init__.py  schemas.py
agent/tradingagents_us/backtest/: __init__.py  engine.py
agent/tradingagents_us/dataflows/: __init__.py  alpaca_broker.py  bulk_loader.py  finnhub.py  fred.py  polygon.py  sector_map.py  sp500_history.py
agent/tradingagents_us/execution/: __init__.py  executor.py  flatten.py
agent/tradingagents_us/graph/: pipeline.py
agent/tradingagents_us/llm/: cache.py  council.py  routing.py
agent/tradingagents_us/notifications/: __init__.py  sender.py
agent/tradingagents_us/risk/: __init__.py  circuit_breaker.py  concentration.py  kill_switch.py  metrics.py  portfolio_limits.py  sizer.py  stop_loss.py
agent/tradingagents_us/storage/: __init__.py  device_tokens.py  models.py  repository.py
deploy/hetzner/: ai-trader-alert.service  ai-trader-api.service  ai-trader-backup.service  ai-trader-backup.timer  ai-trader-preflight.service  ai-trader-preflight.timer  ai-trader.service  ai-trader.timer  eval-report.service  eval-report.timer  install.sh
docs/: ARCHITECTURE.md  RESEARCH.md  ROADMAP.md  USAGE.md  USAGE_MOBILE.md  architecture-current.md  cost-opt-merge-readiness.md  go-live-checklist.md  review-e2e-2026-07-04.md
docs/adr/: 001-multi-agent-fork.md  002-aws-ec2-deployment.md  003-mobile-react-native.md  004-data-providers.md  005-risk-management.md  006-llm-cost-optimization.md  007-regulatory-stance.md  008-scope-us-only.md  README.md
infra/: README.md  backend.hcl
infra/envs/dev/: dev.tfvars.example  main.tf
infra/envs/live/: README.md
infra/envs/paper/: main.tf
infra/modules/alb-waf/: main.tf
infra/modules/apigw-ws/: main.tf
infra/modules/cognito/: main.tf
infra/modules/ec2-agent/: main.tf  user-data.sh.tftpl
infra/modules/ec2-api/: main.tf
infra/modules/ec2-data/: main.tf
infra/modules/elasticache/: main.tf
infra/modules/eventbridge-daily/: main.tf
infra/modules/observability/: main.tf
infra/modules/rds-aurora/: main.tf
infra/modules/s3-data/: main.tf
infra/modules/secrets/: main.tf
infra/modules/vpc/: main.tf
mobile/: ANDROID.md  README.md  RELEASE.md
mobile/app/: .eslintrc.js  app.config.ts  eas.json  jest.config.js  package-lock.json  package.json  tsconfig.json
mobile/app/app/: _layout.tsx  index.tsx
mobile/app/app/(auth)/: login.tsx
mobile/app/app/(tabs)/: _layout.tsx  agents.tsx  ask.tsx  charts.tsx  orders.tsx  portfolio.tsx  settings.tsx
mobile/app/app/approve/: [orderId].tsx
mobile/app/app/trade/: [ticker].tsx
scripts/: setup.sh
(+26 files in other folders)
