[project]
name = "tradingagents-tr"
version = "0.1.0"
description = "AI-powered multi-agent trading system for US + BIST markets"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Canberk Aslan" }]
dependencies = [
    # LLM & orchestration
    "anthropic>=0.40.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",

    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Data sources
    "polygon-api-client>=1.14.0",
    "finnhub-python>=2.4.0",
    "sec-edgar-downloader>=5.0.0",
    "yfinance>=0.2.50",
    "praw>=7.8.0",                 # Reddit
    "tweepy>=4.14.0",               # X API

    # BIST sources
    "pykap>=0.5.0",                 # KAP scraper
    "playwright>=1.49.0",           # KAP dynamic content

    # Analysis & backtest
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "vectorbt>=0.27.0",
    "stockstats>=0.6.0",
    "scipy>=1.14.0",

    # Brokers
    "alpaca-py>=0.34.0",

    # Storage
    "boto3>=1.35.0",
    "redis>=5.2.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
    "pgvector>=0.3.0",

    # Observability
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "sentry-sdk[fastapi]>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "ipython>=8.30.0",
]

[project.scripts]
trader = "tradingagents_tr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tradingagents_tr", "api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "RET", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
