[project]
name = "tradingagents-us"
version = "0.1.0"
description = "AI-powered multi-agent trading system for US equities"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Canberk Aslan" }]
dependencies = [
    # LLM & orchestration
    "anthropic>=0.40.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",

    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-jose[cryptography]>=3.3.0",  # Cognito JWT validation

    # Data sources (US only — see ADR-008)
    "httpx>=0.27.0",                # Polygon / SEC EDGAR / FRED / Alpaca clients
    "yfinance>=0.2.50",             # fallback OHLCV
    "praw>=7.8.0",                  # Reddit sentiment (Phase 3+)
    "lxml>=5.0.0",                  # Wikipedia S&P 500 history parsing
    "beautifulsoup4>=4.12.0",

    # Analysis & backtest
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "pyarrow>=17.0.0",             # parquet
    "vectorbt>=0.27.0",
    "stockstats>=0.6.0",

    # Storage
    "boto3>=1.35.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",     # Aurora PostgreSQL (sqlite needs no driver)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "ipython>=8.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tradingagents_us", "api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "RET", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
